// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmbeddedPage /> should render nothing if no url given 1`] = `
<DocumentFragment>
  <div
    class="undefined_guest"
  >
    <div
      class="undefined_body"
    />
  </div>
</DocumentFragment>
`;

exports[`<EmbeddedPage /> should show error if unable to load 1`] = `
<DocumentFragment>
  <div
    class="undefined_guest"
  >
    <div
      class="undefined_body"
    >
      Couldn't load page
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EmbeddedPage /> should translate _t strings 1`] = `
<DocumentFragment>
  <div
    class="undefined_guest"
  >
    <div
      class="undefined_body"
    >
      <h1>
        Przeglądaj pokoje
      </h1>
    </div>
  </div>
</DocumentFragment>
`;
